  - New formula for detecting hidden.
  - Fixed multis and deeds.
  - Graphical preview for creating Multis.
  - Fix for Plants (menu didn't open when they were grown).
  - Fix: Candidates could not resign by themselves from their guild
  - Implemented stonemining (50:50 chance for ore:gem if activated through the contextmenu of tool).
  - Implemented some new npcs (thx to idget)
 * Misc. Changes:
 * Known Issues, Bugs, and Missing Features:
  - Some skills are still incomplete.
  - Spawn regions are incomplete.
    We welcome donated OSI-like spawn scripts!
  - Town/World regions are incomplete.
    We welcome donated OSI-like region scripts!
  - Possible that a few monsters are missing and/or incomplete.
  - Multis (Houses/Boats) are not completly supported.
  - For latest information check out: http://bugs.wpdev.org

Wolfpack 12.9.13 Beta (25. December 2004)
 * Core Changes:
  - Fixed meditation skillcheck in mana regeneration code.
  - Changed GM talk color.
  - Implemented the onCheckVictim event.
  - Implemented the onDoDamage event.
  - Stablemasters now remove the stabled pets from the follower list.
  - Corpses now decay in multis too.
  - Implemented a walktest command for testing walking.
  - Fixed several other walking bugs.
  - Implemented onRemoteUse for checking if an object that is in the belonging
    of another char may be used. First called for the using char, then for the
    owner of the object.
  - Implemented onSnooping that is called for the owner and for the player trying to
    open a container.
  - Fixed shop restock.
  - Fixed bug #0000364. (Vendors not selling items they bought)
  - Rewrote the vendor buy handler code.
  - Improved the configure script:
    Translations are disabled by default now.
    Cleaner output.
    Fixed a bug with MySQL library reporting.
  - The SectorMaps singleton has been renamed to MapObjects.
  - The deprecated RegionIterators have been removed.