@@ -21,6 +21,7 @@
 	<script>housing.security</script>
 
 	<script>ankh</script>
+	<script>ballotbox</script>
 	<script>test</script>
 	<script>leatherdye</script>
 	<script>specialdye</script>
